--- a/app/src/main/res/menu/play_actions.xml
+++ b/app/src/main/res/menu/play_actions.xml
@@ -1,36 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<navigation
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  xmlns:tools="http://schemas.android.com/tools"
-  android:id="@+id/mobile_navigation"
-  app:startDestination="@+id/nav_play">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto">
 
-  <action
-    android:id="@+id/open_settings"
-    app:destination="@id/nav_settings"/>
+  <item
+    android:id="@+id/new_game"
+    android:title="@string/new_game"
+    android:icon="@drawable/ic_autorenew"
+    app:showAsAction="ifRoom"/>
 
-  <fragment
-    android:id="@+id/nav_play"
-    android:label="@string/menu_play"
-    android:name="edu.cnm.deepdive.codebreaker.controller.PlayFragment"
-    tools:layout="@layout/fragment_play"/>
-
-  <fragment
-    android:id="@+id/nav_scores"
-    android:label="@string/menu_scores"
-    android:name="edu.cnm.deepdive.codebreaker.controller.ScoresFragment"
-    tools:layout="@layout/fragment_scores"/>
-
-  <fragment
-    android:id="@+id/nav_ranks"
-    android:label="@string/menu_ranks"
-    android:name="edu.cnm.deepdive.codebreaker.controller.RanksFragment"
-    tools:layout="@layout/fragment_ranks"/>
-
-  <fragment
-    android:id="@+id/nav_settings"
-    android:label="@string/menu_settings"
-    android:name="edu.cnm.deepdive.codebreaker.controller.SettingsFragment"/>
-
-</navigation>
+</menu>
